src/test/ui/issue-1697.stderr
error[E0432]: unresolved import `unresolved`
  --> $DIR/issue-1697.rs:13:5
   |
LL | use unresolved::*; //~ ERROR unresolved import `unresolved` [E0432]
   |     ^^^^^^^^^^ Maybe a missing `extern crate unresolved;`?

error: aborting due to previous error

For more information about this error, try `rustc --explain E0432`.
